--- a/genericshop/package.json
+++ b/genericshop/package.json
@@ -16,7 +16,9 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.1",
     "ngprogress": "^1.1.3",
+    "node-sass": "^4.11.0",
     "nprogress": "^0.2.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3"
